# fastapi-async-beyond-crud

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  notes.txt  pyproject.toml  requirements.txt  runworker.sh
migrations/: env.py
src/: celery_tasks.py  config.py  mail.py  main.py
src/auth/: routes.py  schemas.py  service.py  utils.py
src/books/: routes.py  schemas.py  service.py
src/db/: main.py
src/reviews/: routes.py  service.py
src/tags/: service.py
